pg_admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pg-admin-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pg-admin.57.155.183.218.nip.io
    - api.pg-admin.57.155.183.218.nip.io
  rules:
  - host: pg-admin.57.155.183.218.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pg-admin-client-service
            port:
              number: 80
  - host: api.pg-admin.57.155.183.218.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pg-admin-server-service
            port:
              number: 7000
